tweaked ui, disable warmup

--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -87,6 +87,8 @@
     "\n",
     "from ipywidgets import VBox, HBox, Button, Dropdown, IntSlider, FloatSlider, Text, Output, Label, Layout\n",
     "import ipywidgets as widgets\n",
+    "from ipywidgets import HTML\n",
+    "\n",
     "\n",
     "# random seed\n",
     "if torch.xpu.is_available():\n",
@@ -250,7 +252,6 @@
     "                .eval()\n",
     "            )\n",
     "        self.max_length = 256\n",
-    "        print(f\"Using max length: {self.max_length}\")\n",
     "\n",
     "        if optimize:\n",
     "            if hasattr(ipex, \"optimize_transformers\"):\n",
@@ -296,6 +297,7 @@
     "        Returns:\n",
     "            torch.Tensor: The generated output tensor.\n",
     "        \"\"\"\n",
+    "        print(f\"Using max length: {self.max_length}\")\n",
     "        with self.autocast(\n",
     "            enabled=True if self.torch_dtype != torch.float32 else False,\n",
     "            dtype=self.torch_dtype,\n",
@@ -415,13 +417,39 @@
     "        previous_text = \"\"\n",
     "    \n",
     "        def display_user_input_widgets():\n",
+    "            default_color = \"\\033[0m\"\n",
+    "            user_color, user_icon = \"\\033[94m\", \"😀 \"\n",
+    "            bot_color, bot_icon = \"\\033[92m\", \"🤖 \"\n",
     "            user_input_widget = Text(placeholder=\"Type your message here...\", layout=Layout(width='80%'))\n",
-    "            send_button = Button(description=\"Send\", layout=Layout(width='10%'))\n",
-    "            display(HBox([user_input_widget, send_button]))\n",
+    "            send_button = Button(description=\"Send\", button_style = \"primary\", layout=Layout(width='10%'))\n",
+    "            chat_spin = HTML(value = \"\")\n",
+    "            spin_style = \"\"\"\n",
+    "            <div class=\"loader\"></div>\n",
+    "            <style>\n",
+    "            .loader {\n",
+    "              border: 5px solid #f3f3f3;\n",
+    "              border-radius: 50%;\n",
+    "              border-top: 5px solid #3498db;\n",
+    "              width: 8px;\n",
+    "              height: 8px;\n",
+    "              animation: spin 3s linear infinite;\n",
+    "            }\n",
+    "            @keyframes spin {\n",
+    "              0% { transform: rotate(0deg); }\n",
+    "              100% { transform: rotate(360deg); }\n",
+    "            }\n",
+    "            </style>\n",
+    "            \"\"\"\n",
+    "            display(HBox([chat_spin, user_input_widget, send_button, ]))\n",
+    "            \n",
     "            def on_send(button):\n",
     "                nonlocal previous_text\n",
+    "                send_button.button_style = \"warning\"\n",
+    "                chat_spin.value = spin_style\n",
     "                orig_input = \"\"\n",
     "                user_input = user_input_widget.value\n",
+    "                with out:\n",
+    "                    print(f\" {user_color}{user_icon}You: {user_input}{default_color}\")\n",
     "                if user_input.lower() == \"exit\":\n",
     "                    return\n",
     "                if \"camel\" in self.model_id_or_path:\n",
@@ -431,8 +459,10 @@
     "                            \"Write a response that appropriately completes the request.\\n\\n\"\n",
     "                            f\"### Instruction:\\n{user_input}\\n\\n### Response:\")\n",
     "                if with_context:\n",
+    "                    self.max_length = 256\n",
     "                    input_ids = self.prepare_input(previous_text, user_input)\n",
     "                else:\n",
+    "                    self.max_length = 96\n",
     "                    input_ids = self.tokenizer.encode(user_input, return_tensors=\"pt\").to(self.device)\n",
     "    \n",
     "                output_ids = self.gen_output(\n",
@@ -447,13 +477,13 @@
     "                generated_text = self.strip_response(generated_text)\n",
     "                generated_text = self.extract_bot_response(generated_text)\n",
     "                generated_text = self.remove_repetitions(generated_text, user_input)\n",
-    "    \n",
+    "                send_button.button_style = \"success\"\n",
+    "                chat_spin.value = \"\"\n",
+    "\n",
     "                with out:\n",
     "                    if orig_input:\n",
     "                        user_input = orig_input\n",
-    "                    print(f\"You: {user_input}\")\n",
-    "                    print(f\"Bot: {generated_text}\")\n",
-    "    \n",
+    "                    print(f\" {bot_color}{bot_icon}Bot: {generated_text}{default_color}\")    \n",
     "                if with_context:\n",
     "                    previous_text += \"\\nUser: \" + user_input + \"\\nBot: \" + generated_text\n",
     "                user_input_widget.value = \"\" \n",
@@ -496,7 +526,8 @@
    "source": [
     "model_cache = {}\n",
     "\n",
-    "def main():\n",
+    "from ipywidgets import HTML\n",
+    "def interact_with_llm():\n",
     "    models = [\"Writer/camel-5b-hf\", \"openlm-research/open_llama_3b_v2\",]\n",
     "    interaction_modes = [\"Interact with context\", \"Interact without context\"]\n",
     "    model_dropdown = Dropdown(options=models, value=models[0], description=\"Model:\")\n",
@@ -512,13 +543,34 @@
     "    right_panel = VBox([temperature_slider, top_p_slider, top_k_slider, num_beams_slider, repetition_penalty_slider],\n",
     "                       layout=Layout(margin=\"0px 0px 10px 20px\"))\n",
     "    user_input_widgets = HBox([left_panel, right_panel], layout=Layout(margin=\"0px 50px 10px 0px\"))\n",
-    "    start_button = Button(description=\"Start Interaction!\")\n",
-    "    start_button.layout.margin = '0 auto'\n",
+    "    spinner = HTML(value=\"\")\n",
+    "    start_button = Button(description=\"Start Interaction!\", button_style=\"primary\")\n",
+    "    start_button_spinner = HBox([start_button, spinner])\n",
+    "    start_button_spinner.layout.margin = '0 auto'\n",
     "    display(user_input_widgets)\n",
-    "    display(start_button)\n",
+    "    display(start_button_spinner)\n",
     "    display(out)\n",
     "    \n",
     "    def on_start(button):\n",
+    "        start_button.button_style = \"warning\"\n",
+    "        start_button.description = \"Loading...\"\n",
+    "        spinner.value = \"\"\"\n",
+    "        <div class=\"loader\"></div>\n",
+    "        <style>\n",
+    "        .loader {\n",
+    "          border: 5px solid #f3f3f3;\n",
+    "          border-radius: 50%;\n",
+    "          border-top: 5px solid #3498db;\n",
+    "          width: 16px;\n",
+    "          height: 16px;\n",
+    "          animation: spin 3s linear infinite;\n",
+    "        }\n",
+    "        @keyframes spin {\n",
+    "          0% { transform: rotate(0deg); }\n",
+    "          100% { transform: rotate(360deg); }\n",
+    "        }\n",
+    "        </style>\n",
+    "        \"\"\"\n",
     "        out.clear_output()\n",
     "        with out:\n",
     "            print(\"\\nSetting up the model, please wait...\")\n",
@@ -534,19 +586,22 @@
     "        if model_key not in model_cache:\n",
     "            model_cache[model_key] = ChatBotModel(model_id_or_path=model_choice)\n",
     "        bot = model_cache[model_key]\n",
-    "        if model_key not in model_cache:\n",
-    "            bot.warmup_model(\n",
-    "                temperature=temperature,\n",
-    "                top_p=top_p,\n",
-    "                top_k=top_k,\n",
-    "                num_beams=num_beams,\n",
-    "                repetition_penalty=repetition_penalty,\n",
-    "            )\n",
+    "        #if model_key not in model_cache:\n",
+    "        #    bot.warmup_model(\n",
+    "        #        temperature=temperature,\n",
+    "        #        top_p=top_p,\n",
+    "        #        top_k=top_k,\n",
+    "        #        num_beams=num_beams,\n",
+    "        #        repetition_penalty=repetition_penalty,\n",
+    "        #    )\n",
     "        \n",
     "        with out:\n",
+    "            start_button.button_style = \"success\"\n",
+    "            start_button.description = \"Refresh\"\n",
+    "            spinner.value = \"\"\n",
     "            print(\"Ready!\")\n",
     "            print(\"\\nNote: This is a demonstration using pretrained models which were not fine-tuned for chat.\")\n",
-    "            print(\"If the bot doesn't respond, try restarting the kernel.\\n\")\n",
+    "            print(\"If the bot doesn't respond, try clicking on refresh.\\n\")\n",
     "        try:\n",
     "            with out:\n",
     "                bot.interact(\n",
@@ -593,13 +648,17 @@
    },
    "outputs": [],
    "source": [
-    "main()"
+    "interact_with_llm()"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "2d0d5473-e7fe-4de0-a8c0-f49ba924f35d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Language Models Disclaimer and Information\n",
     "\n",
