ui fix, disable warmup

--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -165,7 +165,7 @@
     "        torch_dtype: torch.dtype = torch.bfloat16,\n",
     "        optimize: bool = True,\n",
     "        enable_scheduler: bool = False,\n",
-    "        warmup: bool = True,\n",
+    "        warmup: bool = False,\n",
     "    ) -> None:\n",
     "        \"\"\"\n",
     "        The initializer for Text2ImgModel class.\n",
@@ -390,8 +390,8 @@
     "\n",
     "    output_dir = \"output\"\n",
     "    model_ids = [\n",
-    "        \"CompVis/stable-diffusion-v1-4\",\n",
     "        \"stabilityai/stable-diffusion-2-1\",\n",
+    "        \"CompVis/stable-diffusion-v1-4\",\n",
     "    ]    \n",
     "    \n",
     "    model_dropdown = widgets.Dropdown(\n",
@@ -419,7 +419,7 @@
     "    )\n",
     "    \n",
     "    layout = widgets.Layout(margin=\"0px 50px 10px 0px\")\n",
-    "    button = widgets.Button(description=\"Generate Images!\")   \n",
+    "    button = widgets.Button(description=\"Generate Images!\", button_style=\"primary\")   \n",
     "    left_box = widgets.VBox([model_dropdown, prompt_text, num_images_slider], layout=layout)\n",
     "    right_box = widgets.VBox([enhance_checkbox], layout=layout)\n",
     "    user_input_widgets = widgets.HBox([left_box, right_box], layout=layout)  \n",
@@ -431,6 +431,7 @@
     "    def on_submit(button):\n",
     "        with out:\n",
     "            clear_output(wait=True)\n",
+    "            button.button_style = \"warning\"\n",
     "            print(\"\\nGenerating Images, once generated images will be saved `./output` dir, please wait...\")\n",
     "            selected_model_index = model_ids.index(model_dropdown.value)\n",
     "            model_id = model_ids[selected_model_index]\n",
@@ -482,6 +483,7 @@
     "            except Exception as e:\n",
     "                print(f\"An error occurred: {e}\")\n",
     "            finally:\n",
+    "                button.button_style = \"primary\"\n",
     "                print(\n",
     "                    f\"Complete generating {num_images} images in './output' in {time.time() - start_time:.2f} seconds.\"\n",
     "                )\n",
