added more prompt enhancements

--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "This notebook is powered by Intel® Data Center GPU Max Series and will walk you through examples, help you understand the outputs, and give pointers on how to get the best results. No technical deep dives, just clear steps and explanations.\n",
     "\n",
-    "Read to turn your words into visuals?, Let's get started!"
+    "Ready to turn your words into visuals?, Let's get started!"
    ]
   },
   {
@@ -113,21 +113,17 @@
     "\n",
     "**A Glimpse Behind the Scenes**\n",
     "\n",
-    "For those intrigued by the underpinnings of this adventure, let's delve into the technicalities of the code. No worries if you're not aiming for a deep dive; understanding this isn't a prerequisite to harness the magic of the notebook. But for the tech-curious, let's dissect:\n",
+    "For those intrigued by the underpinnings of this adventure, let's delve into the technicalities of the code. No worries if you're not aiming for a deep dive; understanding this isn't a prerequisite to run the notebook. But for the tech-curious, let's dissect:\n",
     "\n",
-    "- **Class**: At the heart of our operations is the `Text2ImgModel` class. This acts as the central hub, choreographing the process of transforming textual prompts into visual masterpieces.\n",
-    "\n",
-    "- **Initialization**: When we instantiate this class, we have the liberty to tailor its behavior. This includes selecting the model's path, the device (defaulting to Intel's \"xpu\"), the data type, and more. There are also provisions to supercharge the model's performance via optimizations.\n",
+    "- **Class**: At the heart of our operations is the `Text2ImgModel` class. This class defines the process of transforming textual prompts into visual masterpieces.\n",
     "\n",
     "- **Pipeline Loading**: The `_load_pipeline` function is where we bring the pre-trained model onboard. This sets the stage for all our text-to-image transformations.\n",
     "\n",
-    "- **Optimization**: Performance is paramount. With the `_optimize_pipeline` and `optimize_pipeline` methods, we leverage Intel-specific optimizations using the Intel Extension For PyTorch (IPEX) to ensure our model runs like the wind.\n",
+    "- **Optimization**: Performance is paramount. With the `_optimize_pipeline` and `optimize_pipeline` methods, we leverage Intel-specific optimizations using the Intel Extension For PyTorch (IPEX) to ensure our model runs fast!.\n",
     "\n",
-    "- **Warming Up**: Just like a car on a cold morning, our model benefits from a brief warm-up. The `warmup_model` method handles this, ensuring that our model is primed and ready for the tasks ahead.\n",
+    "- **The Grand Finale - Image Generation**: The `generate_images` method is where dreams meet reality. It interprets the textual prompts, consults with the model, and then crafts images that encapsulate the essence of the prompts. You can choose the model, provide a prompt and specify the number of images.\n",
     "\n",
-    "- **The Grand Finale - Image Generation**: The `generate_images` method is where dreams meet reality. It interprets the textual prompts, consults with the model, and then crafts images that encapsulate the essence of the prompts. You can specify the number of images, the number of noise removal steps, and even the save path for these artworks.\n",
-    "\n",
-    "Intrigued? Dive into the code below and see how we've tailored every aspect, ensuring it's optimized for Intel GPUs.\n",
+    "Intrigued? Dive into the code below and see how we've tailored the image generation pipeline, ensuring it's optimized for Intel GPUs.\n",
     "\n",
     "---\n"
    ]
@@ -330,7 +326,7 @@
     "                        raise\n",
     "            output_image_path = os.path.join(\n",
     "                save_path,\n",
-    "                f\"{'_'.join(prompt.split()[:3])}_{i}.png\",\n",
+    "                f\"{'_'.join(prompt.split()[:3])}_{i}_{sum(ord(c) for c in prompt) % 10000}.png\",\n",
     "            )\n",
     "            image.save(output_image_path)\n",
     "            images.append(image)\n",
@@ -351,7 +347,7 @@
     "- **Model Selection**: Pick your desired pre-trained model from the available list.\n",
     "- **Prompt Input**: Enter your creative textual prompt, the muse for the image to be generated.\n",
     "- **Number of Images**: Specify the number of visual interpretations you'd like to see for your prompt.\n",
-    "- **Enhancement**: Toggle an option to sprinkle some automatic enhancements to your prompt, potentially enriching the outcome.\n",
+    "- **Enhancement**: Toggle an option to enhance your your prompt, potentially enriching the generated results.\n",
     "\n",
     "After setting your preferences, all it takes is a button click to witness the text's metamorphosis into imagery!\n",
     "\n",
@@ -385,6 +381,9 @@
     "\n",
     "model_cache = {}\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "def prompt_to_image():\n",
     "    out = widgets.Output()\n",
     "\n",
@@ -397,7 +396,7 @@
     "    model_dropdown = widgets.Dropdown(\n",
     "        options=model_ids,\n",
     "        value=model_ids[0],\n",
-    "        description=\"Select Model:\",\n",
+    "        description=\"Model:\",\n",
     "    )    \n",
     "    prompt_text = widgets.Text(\n",
     "        value=\"\",\n",
@@ -409,7 +408,7 @@
     "        min=1,\n",
     "        max=10,\n",
     "        step=1,\n",
-    "        description=\"Num of Images:\",\n",
+    "        description=\"Images:\",\n",
     "    )    \n",
     "    enhance_checkbox = widgets.Checkbox(\n",
     "        value=False,\n",
@@ -463,6 +462,16 @@
     "                \"trending in artstation fantasy\",\n",
     "                \"electric\",\n",
     "                \"night\",\n",
+    "                \"whimsical\",\n",
+    "                \"surreal\",\n",
+    "                \"mystical\",\n",
+    "                \"nostalgic\",\n",
+    "                \"vibrant\",\n",
+    "                \"tranquil\",\n",
+    "                \"cinematic\",\n",
+    "                \"enchanted\",\n",
+    "                \"ethereal\",\n",
+    "                \"pastoral\"\n",
     "            ]\n",
     "            if not prompt:\n",
     "                prompt = \" \"\n",
@@ -520,9 +529,7 @@
     "\n",
     "**Let's Dive In! And Experience the Art of Creation**\n",
     "\n",
-    "Eager to breathe life into your words? The interface below is your canvas. Set your preferences, type in your desired visual, and hit the \"Generate Images!\" button to witness the magic of Stable Diffusion.\n",
-    "\n",
-    "What unfolds are unique images sculpted by the power of your words, each a manifestation of the expansive interpretations our model draws from your input.\n",
+    "Set your preferences below, type in your desired visual, and hit the \"Generate Images!\" button to witness the magic of Stable Diffusion.\n",
     "\n",
     "This isn't just about AI; it's about the alchemy of your imagination combined with the prowess of Diffusion models. Every image stands as a symbol of the boundless potential of this synergy.\n",
     "\n",
