--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -49,14 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "791c50f9-4524-4410-8ff9-2c55dc674950",
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installation successful\n"
+     ]
+    }
+   ],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "# #import sys\n",
@@ -180,13 +188,13 @@
     "        self.data_type = torch_dtype\n",
     "        if optimize:\n",
     "            start_time = time.time()\n",
-    "            print(\"Optimizing the model...\")\n",
+    "            #print(\"Optimizing the model...\")\n",
     "            self.optimize_pipeline()\n",
-    "            print(\n",
-    "                \"Optimization completed in {:.2f} seconds.\".format(\n",
-    "                    time.time() - start_time\n",
-    "                )\n",
-    "            )\n",
+    "            #print(\n",
+    "            #    \"Optimization completed in {:.2f} seconds.\".format(\n",
+    "            #        time.time() - start_time\n",
+    "            #    )\n",
+    "            #)\n",
     "        if warmup:\n",
     "            self.warmup_model()\n",
     "\n",
@@ -236,7 +244,7 @@
     "            except Exception as e:\n",
     "                print(f\"An error occurred while saving the model: {e}. Proceeding without saving.\")\n",
     "        pipeline = pipeline.to(self.device)\n",
-    "        print(\"Model loaded.\")\n",
+    "        #print(\"Model loaded.\")\n",
     "        return pipeline\n",
     "\n",
     "    def _optimize_pipeline(self, pipeline: DiffusionPipeline) -> DiffusionPipeline:\n",
@@ -386,7 +394,6 @@
     "\n",
     "def prompt_to_image():\n",
     "    out = widgets.Output()\n",
-    "\n",
     "    output_dir = \"output\"\n",
     "    model_ids = [\n",
     "        \"stabilityai/stable-diffusion-2-1\",\n",
@@ -402,6 +409,7 @@
     "        value=\"\",\n",
     "        placeholder=\"Enter your prompt\",\n",
     "        description=\"Prompt:\",\n",
+    "        layout=widgets.Layout(width=\"600px\")\n",
     "    )    \n",
     "    num_images_slider = widgets.IntSlider(\n",
     "        value=2,\n",
@@ -417,11 +425,17 @@
     "        indent=False\n",
     "    )\n",
     "    \n",
-    "    layout = widgets.Layout(margin=\"0px 50px 10px 0px\")\n",
+    "    layout = widgets.Layout(margin=\"20px\")\n",
     "    button = widgets.Button(description=\"Generate Images!\", button_style=\"primary\")   \n",
-    "    left_box = widgets.VBox([model_dropdown, prompt_text, num_images_slider], layout=layout)\n",
-    "    right_box = widgets.VBox([enhance_checkbox], layout=layout)\n",
-    "    user_input_widgets = widgets.HBox([left_box, right_box], layout=layout)  \n",
+    "    model_dropdown.layout.width = \"70%\"\n",
+    "    enhance_checkbox.layout.width = \"70%\"\n",
+    "    enhance_checkbox.layout.margin = \"0 0 0 60px\"\n",
+    "    prompt_text.layout.width = \"100%\"\n",
+    "    button.layout.margin=\"0 0 0 400px\"\n",
+    "    top_row = widgets.HBox([model_dropdown, enhance_checkbox])\n",
+    "    bottom_row = widgets.HBox([prompt_text])\n",
+    "    left_box = widgets.VBox([top_row, bottom_row, num_images_slider])\n",
+    "    user_input_widgets = widgets.HBox([left_box], layout=layout)\n",
     "    display(user_input_widgets)\n",
     "    display(button)\n",
     "    display(out)\n",
@@ -431,7 +445,7 @@
     "        with out:\n",
     "            clear_output(wait=True)\n",
     "            button.button_style = \"warning\"\n",
-    "            print(\"\\nGenerating Images, once generated images will be saved `./output` dir, please wait...\")\n",
+    "            print(\"\\nOnce generated, images will be saved to `./output` dir, please wait...\")\n",
     "            selected_model_index = model_ids.index(model_dropdown.value)\n",
     "            model_id = model_ids[selected_model_index]\n",
     "            model_key = (model_id, \"xpu\")\n",
@@ -493,9 +507,9 @@
     "                print(f\"An error occurred: {e}\")\n",
     "            finally:\n",
     "                button.button_style = \"primary\"\n",
-    "                print(\n",
-    "                    f\"Complete generating {num_images} images in './output' in {time.time() - start_time:.2f} seconds.\"\n",
-    "                )\n",
+    "                #print(\n",
+    "                #    f\"Complete generating {num_images} images in './output' in {time.time() - start_time:.2f} seconds.\"\n",
+    "                #)\n",
     "                \n",
     "    button.on_click(on_submit)\n",
     "\n",
@@ -562,9 +576,9 @@
     "tags": []
    },
    "source": [
-    "## Reference and Guidelines for Models Used in This Notebook\n",
+    "<!--#### Reference and Guidelines for Models Used in This Notebook\n",
     "\n",
-    "### CompVis/stable-diffusion-v1-4\n",
+    "##### CompVis/stable-diffusion-v1-4\n",
     "- **Model card:** [CompVis/stable-diffusion-v1-4](https://huggingface.co/CompVis/stable-diffusion-v1-4)\n",
     "- **License:** CreativeML OpenRAIL M license\n",
     "- **Reference:**\n",
@@ -579,7 +593,7 @@
     "    }\n",
     "    ```\n",
     "\n",
-    "### stabilityai/stable-diffusion-2\n",
+    "##### stabilityai/stable-diffusion-2\n",
     "- **Model card:** [stabilityai/stable-diffusion-2](https://huggingface.co/stabilityai/stable-diffusion-2)\n",
     "- **License:** CreativeML Open RAIL++-M License\n",
     "- **Reference:**\n",
@@ -594,7 +608,7 @@
     "    }\n",
     "    ```\n",
     "\n",
-    "### Disclaimer for Using Stable Diffusion Models\n",
+    "##### Disclaimer for Using Stable Diffusion Models\n",
     "\n",
     "The stable diffusion models provided here are powerful tools for high-resolution image synthesis, including text-to-image and image-to-image transformations. While they are designed to produce high-quality results, users should be aware of potential limitations:\n",
     "\n",
@@ -606,11 +620,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8cc5f23-fa6d-4ed9-a842-62d8a9acda14",
+   "cell_type": "markdown",
+   "id": "da6c16a9-7186-4535-9e77-d67cefbdac35",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### Reference and Guidelines for Models Used in This Notebook\n",
+    "\n",
+    "##### CompVis/stable-diffusion-v1-4\n",
+    "- **Model card:** [CompVis/stable-diffusion-v1-4](https://huggingface.co/CompVis/stable-diffusion-v1-4)\n",
+    "- **License:** CreativeML OpenRAIL M license\n",
+    "- **Reference:**\n",
+    "    ```bibtex\n",
+    "    @InProceedings{Rombach_2022_CVPR,\n",
+    "        author    = {Rombach, Robin and Blattmann, Andreas and Lorenz, Dominik and Esser, Patrick and Ommer, Bj\\\"orn},\n",
+    "        title     = {High-Resolution Image Synthesis With Latent Diffusion Models},\n",
+    "        booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},\n",
+    "        month     = {June},\n",
+    "        year      = {2022},\n",
+    "        pages     = {10684-10695}\n",
+    "    }\n",
+    "    ```\n",
+    "\n",
+    "##### stabilityai/stable-diffusion-2\n",
+    "- **Model card:** [stabilityai/stable-diffusion-2](https://huggingface.co/stabilityai/stable-diffusion-2)\n",
+    "- **License:** CreativeML Open RAIL++-M License\n",
+    "- **Reference:**\n",
+    "    ```bibtex\n",
+    "    @InProceedings{Rombach_2022_CVPR,\n",
+    "        author    = {Rombach, Robin and Blattmann, Andreas and Lorenz, Dominik and Esser, Patrick and Ommer, Bj\\\"orn},\n",
+    "        title     = {High-Resolution Image Synthesis With Latent Diffusion Models},\n",
+    "        booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},\n",
+    "        month     = {June},\n",
+    "        year      = {2022},\n",
+    "        pages     = {10684-10695}\n",
+    "    }\n",
+    "    ```\n",
+    "\n",
+    "#### Disclaimer for Using Stable Diffusion Models\n",
+    "\n",
+    "The stable diffusion models provided here are powerful tools for high-resolution image synthesis, including text-to-image and image-to-image transformations. While they are designed to produce high-quality results, users should be aware of potential limitations:\n",
+    "\n",
+    "- **Quality Variation:** The quality of generated images may vary based on the complexity of the input text or image, and the alignment with the model's training data.\n",
+    "- **Licensing and Usage Constraints:** Please carefully review the licensing information associated with each model to ensure compliance with all terms and conditions.\n",
+    "- **Ethical Considerations:** Consider the ethical implications of the generated content, especially in contexts that may involve sensitive or controversial subjects.\n",
+    "\n",
+    "For detailed information on each model's capabilities, limitations, and best practices, please refer to the respective model cards and associated publications linked below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbfdd9f3-5ccb-433d-ac46-f107290f38d9",
+   "metadata": {},
    "source": []
   }
  ],
