ui fix, warmup=off

--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -34,9 +34,9 @@
     "\n",
     "Imagine taking a picture and a few words of inspiration, and watching as they transform into a new visual representation. With Stable Diffusion, this imaginative exercise becomes a tangible experience. Want to see a landscape shift from day to night? Or perhaps turn a doodle into a detailed artwork? Dive in to explore these possibilities and more.\n",
     "\n",
-    "Behind the scenes, we're harnessing the power of Intel® Data Center GPU Max Series GPUs. These GPUs are well-suited to handle the demands of tasks like Stable Diffusion, ensuring a smooth experience for you.\n",
+    "Behind the scenes, we're harnessing the power of Intel® Data Center GPU Max Series GPUs.\n",
     "\n",
-    "This guide is designed to be straightforward and user-friendly. We'll introduce you to examples, help you understand the results, and offer ways to tweak the process. No deep technical knowledge required, just a spark of creativity and a dash of curiosity.\n",
+    "This guide is designed to be straightforward and user-friendly. No deep technical knowledge required, just a spark of creativity and a dash of curiosity.\n",
     "\n",
     "Ready to get started? Let's begin by setting up a few things and diving into the experience!\n"
    ]
@@ -117,15 +117,7 @@
     "\n",
     "- **Class Definition**: We've defined a class `Img2ImgModel` that does the heavy lifting. It sets up and optimizes the Stable Diffusion model for image transformations based on text prompts.\n",
     "  \n",
-    "- **Initialization**: When creating an instance of this class, we can specify various parameters like the model's path, device to run on (defaulting to Intel's \"xpu\" device), and data type. We've also included options to optimize the model for performance and warm it up for faster initial runs.\n",
-    "  \n",
-    "- **Pipeline Loading**: The `_load_pipeline` method sets up the necessary processes (or pipeline) for our image transformations using the specified pre-trained model.\n",
-    "  \n",
     "- **Optimization**: For best performance, the model is optimized using Intel-specific techniques in the `_optimize_pipeline` and `optimize_pipeline` methods using Intel Extension For PyTorch.\n",
-    "  \n",
-    "- **Image Handling**: Methods like `get_image_from_url` allow for fetching and processing images directly from web URLs.\n",
-    "  \n",
-    "- **Model Warmup**: Before diving into the main tasks, we \"warm up\" the model using the `warmup_model` method. This ensures that subsequent runs are faster.\n",
     "  \n",
     "- **Image Generation**: The heart of this class, `generate_images`, takes in a text prompt and an image URL. It then generates new images based on the text's instructions, applying various parameters like strength of transformation and guidance scale.\n",
     "\n",
@@ -162,7 +154,7 @@
     "        device: str = \"xpu\",\n",
     "        torch_dtype: torch.dtype = torch.bfloat16,\n",
     "        optimize: bool = True,\n",
-    "        warmup: bool = True,\n",
+    "        warmup: bool = False,\n",
     "        scheduler: bool = True,\n",
     "    ) -> None:\n",
     "        \"\"\"\n",
@@ -181,13 +173,13 @@
     "        self.pipeline = self._load_pipeline(model_id_or_path, torch_dtype)\n",
     "        if optimize:\n",
     "            start_time = time.time()\n",
-    "            print(\"Optimizing the model...\")\n",
+    "            #print(\"Optimizing the model...\")\n",
     "            self.optimize_pipeline()\n",
-    "            print(\n",
-    "                \"Optimization completed in {:.2f} seconds.\".format(\n",
-    "                    time.time() - start_time\n",
-    "                )\n",
-    "            )\n",
+    "            #print(\n",
+    "            #    \"Optimization completed in {:.2f} seconds.\".format(\n",
+    "            #        time.time() - start_time\n",
+    "            #    )\n",
+    "            #)\n",
     "        if warmup:\n",
     "            self.warmup_model()\n",
     "\n",
@@ -232,7 +224,7 @@
     "            except Exception as e:\n",
     "                print(f\"An error occurred while saving the model: {e}. Proceeding without saving.\")\n",
     "        pipeline = pipeline.to(self.device)\n",
-    "        print(\"Model loaded.\")\n",
+    "        #print(\"Model loaded.\")\n",
     "        return pipeline\n",
     "\n",
     "    def _optimize_pipeline(\n",
@@ -307,11 +299,11 @@
     "            )\n",
     "        except Exception:\n",
     "            print(\"model warmup delayed...\")\n",
-    "        print(\n",
-    "            \"Model is set up and ready! Warm-up completed in {:.2f} seconds.\".format(\n",
-    "                time.time() - start_time\n",
-    "            )\n",
-    "        )\n",
+    "        #print(\n",
+    "        #    \"Model is set up and ready! Warm-up completed in {:.2f} seconds.\".format(\n",
+    "        #        time.time() - start_time\n",
+    "        #    )\n",
+    "        #)\n",
     "\n",
     "    def get_inputs(self, prompt, batch_size=1):\n",
     "        self.generator = [torch.Generator() for i in range(batch_size)]\n",
@@ -442,7 +434,7 @@
     "    model_dropdown = widgets.Dropdown(\n",
     "        options=model_ids,\n",
     "        value=model_ids[0],\n",
-    "        description=\"Select Model:\",\n",
+    "        description=\"Model:\",\n",
     "    )    \n",
     "    prompt_text = widgets.Text(\n",
     "        value=\"\",\n",
@@ -454,7 +446,7 @@
     "        min=1,\n",
     "        max=10,\n",
     "        step=1,\n",
-    "        description=\"Num of Images:\",\n",
+    "        description=\"Images:\",\n",
     "    )    \n",
     "    image_url_text = widgets.Text(\n",
     "        value=\"https://user-images.githubusercontent.com/786476/256401499-f010e3f8-6f8d-4e9f-9d1f-178d3571e7b9.png\",\n",
@@ -467,12 +459,18 @@
     "        disabled=False,\n",
     "        indent=False\n",
     "    )\n",
+    "    enhance_checkbox.layout.margin = \"0 0 0 10px\"\n",
+    "    num_images_slider.layout.margin = \"0 0 0 8px\"\n",
+    "    prompt_text.layout.width = \"100%\"\n",
     "    layout = widgets.Layout(margin=\"0px 50px 10px 0px\")\n",
-    "    button = widgets.Button(description=\"Generate Images!\")\n",
-    "    left_box = VBox([model_dropdown, prompt_text, num_images_slider], layout=layout)\n",
+    "    button = widgets.Button(description=\"Generate Images!\", button_style=\"primary\")\n",
+    "    left_box = VBox([model_dropdown,num_images_slider], layout=layout)\n",
     "    right_box = VBox([image_url_text, enhance_checkbox], layout=layout)\n",
     "    user_input_widgets = HBox([left_box, right_box], layout=layout)\n",
+    "    prompt_text.layout.width = \"60%\"\n",
+    "    button.layout.margin = \"35px\"\n",
     "    display(user_input_widgets)\n",
+    "    display( prompt_text)\n",
     "    display(button)\n",
     "    display(out)\n",
     "    \n",
@@ -480,7 +478,7 @@
     "    def on_submit(button):\n",
     "        with out:\n",
     "            clear_output(wait=True)\n",
-    "            print(\"Generating Images, once generated images will be saved `./image_to_image` dir, please wait...\")\n",
+    "            print(\"Once generated, images will be saved to `./image_to_image` dir, please wait...\")\n",
     "            selected_model_index = model_ids.index(model_dropdown.value)\n",
     "            model_id = model_ids[selected_model_index]\n",
     "            model_key = (model_id, \"xpu\")\n",
@@ -536,7 +534,7 @@
     "                print(f\"An error occurred: {e}\")\n",
     "            finally:\n",
     "                status = f\"Complete generating {num_images} images in {time.time() - start_time:.2f} seconds.\"\n",
-    "                print(status)\n",
+    "                #print(status)\n",
     "    button.on_click(on_submit)\n",
     "\n",
     "def display_generated_images(image_to_image_dir=\"image_to_image\"):\n",
@@ -573,11 +571,8 @@
     "\n",
     "Once done, you'll find the images generated based on your prompt. Presented in a grid format, they showcase the diverse interpretations and transformations the model inferred from your input.\n",
     "\n",
-    "Take a moment to marvel at the fusion of your creativity and the prowess of Stable Diffusion. Each image is a testament to the limitless possibilities this technology offers.\n",
     "\n",
-    "\n",
-    "Go ahead, unleash your creativity!\n",
-    "\n"
+    "Go ahead, unleash your creativity!"
    ]
   },
   {
@@ -601,10 +596,10 @@
    "id": "1915e149-0ad6-475d-9b16-b34eb3d2806a",
    "metadata": {},
    "source": [
-    "## Reference and Guidelines for Models Used in This Notebook\n",
+    "#### Reference and Guidelines for Models Used in This Notebook\n",
     "\n",
     "\n",
-    "### runwayml/stable-diffusion-v1-5\n",
+    "##### runwayml/stable-diffusion-v1-5\n",
     "- **Model card:** [runwayml/stable-diffusion-v1-5](https://huggingface.co/runwayml/stable-diffusion-v1-5)\n",
     "- **License:** CreativeML OpenRAIL M license\n",
     "- **Reference:**\n",
@@ -619,7 +614,7 @@
     "    }\n",
     "    ```\n",
     "\n",
-    "### stabilityai/stable-diffusion-2-1\n",
+    "##### stabilityai/stable-diffusion-2-1\n",
     "- **Model card:** [stabilityai/stable-diffusion-2-1](https://huggingface.co/stabilityai/stable-diffusion-2-1)\n",
     "- **License:** CreativeML Open RAIL++-M License\n",
     "- **Reference:**\n",
@@ -634,7 +629,7 @@
     "    }\n",
     "    ```\n",
     "\n",
-    "### Disclaimer for Using Stable Diffusion Models\n",
+    "##### Disclaimer for Using Stable Diffusion Models\n",
     "\n",
     "The stable diffusion models provided here are powerful tools for high-resolution image synthesis, including text-to-image and image-to-image transformations. While they are designed to produce high-quality results, users should be aware of potential limitations:\n",
     "\n",
@@ -644,14 +639,6 @@
     "\n",
     "For detailed information on each model's capabilities, limitations, and best practices, please refer to the respective model cards and associated publications linked above.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20fa7fc1-df66-4e7f-8610-ed11e730759e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
