--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -364,7 +364,7 @@
     "                for j in range(len(images)):\n",
     "                    output_image_path = os.path.join(\n",
     "                        save_path,\n",
-    "                        f\"{'_'.join(prompt.split()[:3])}_{i+j}.png\",\n",
+    "                        f\"{'_'.join(prompt.split()[:3])}_{i+j}__{int(time.time() * 1e6)}.png\",\n",
     "                    )\n",
     "                    images[j].save(output_image_path)\n",
     "\n"
@@ -467,7 +467,7 @@
     "    left_box = VBox([model_dropdown,num_images_slider], layout=layout)\n",
     "    right_box = VBox([image_url_text, enhance_checkbox], layout=layout)\n",
     "    user_input_widgets = HBox([left_box, right_box], layout=layout)\n",
-    "    prompt_text.layout.width = \"60%\"\n",
+    "    prompt_text.layout.width = \"57.5%\"\n",
     "    button.layout.margin = \"35px\"\n",
     "    display(user_input_widgets)\n",
     "    display( prompt_text)\n",
